--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Prisma",
   "version": "1.0",
   "description": "A Fancy Minecraft Theme to light up your new tabs!! New background images on each refresh.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
     "storage",
     "tabs"
