--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Prisma",
   "version": "1.0",
-  "description": "A Fancy Minecraft Theme to light up your new tabs!! New background images on each refresh.",
+  "description": "A Fancy Minecraft Theme to light up your new tabs!! New dynamic background on each refresh.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
