--- a/screenshots/desktop.ini
+++ b/screenshots/desktop.ini
@@ -4,3 +4,4 @@ Screenshot 2025-01-16 001802.png=@Screenshot 2025-01-16 001802,0
 Screenshot 2025-01-16 001841.png=@Screenshot 2025-01-16 001841,0
 Screenshot 2025-01-16 001913.png=@Screenshot 2025-01-16 001913,0
 Screenshot 2025-01-16 001833.png=@Screenshot 2025-01-16 001833,0
+Screenshot 2025-01-16 080732.png=@Screenshot 2025-01-16 080732,0
