--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "search"
   ],
   "host_permissions": [
     "https://api.github.com/*",
